--- a/front/front/tsconfig.app.json
+++ b/front/front/tsconfig.app.json
@@ -9,7 +9,8 @@
     "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "node_modules/ol/**/*.js"
   ],
   "exclude": [
     "src/test.ts",
