--- a/front/front/package.json
+++ b/front/front/package.json
@@ -23,13 +23,14 @@
     "@angular/platform-browser-dynamic": "~8.2.3",
     "@angular/router": "~8.2.3",
     "hammerjs": "^2.0.8",
+    "html-to-image": "^0.1.1",
     "ol": "^5.3.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.21",
+    "@angular-devkit/build-angular": "^0.900.4",
     "@angular/cli": "~8.3.1",
     "@angular/compiler-cli": "~8.2.3",
     "@angular/language-service": "~8.2.3",
