--- a/front/front/tsconfig.app.json
+++ b/front/front/tsconfig.app.json
@@ -9,7 +9,7 @@
     "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*.ts",
+    "src/**/*.d.ts",
     "node_modules/ol/**/*.js"
   ],
   "exclude": [
