--- a/front/front/package.json
+++ b/front/front/package.json
@@ -12,19 +12,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.4",
-    "@angular/cdk": "~8.1.4",
-    "@angular/common": "~9.0.4",
-    "@angular/compiler": "~9.0.4",
-    "@angular/core": "~9.0.4",
+    "@angular/cdk": "~9.1.1",
+    "@angular/common": "~9.0.5",
+    "@angular/compiler": "~9.0.5",
+    "@angular/core": "~9.0.5",
+    "@angular/fire": "^5.4.2",
     "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.0.4",
-    "@angular/material": "^8.1.4",
+    "@angular/material": "^7.3.2",
     "@angular/platform-browser": "~9.0.4",
     "@angular/platform-browser-dynamic": "~9.0.4",
     "@angular/router": "~9.0.4",
+    "firebase": "^7.10.0",
     "hammerjs": "^2.0.8",
     "html-to-image": "^0.1.1",
-    "ol": "^5.3.3",
+    "ol": "^6.2.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
