--- a/front/front/package.json
+++ b/front/front/package.json
@@ -11,17 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.4",
-    "@angular/cdk": "~8.1.4",
-    "@angular/common": "~9.0.4",
-    "@angular/compiler": "~9.0.4",
-    "@angular/core": "~9.0.4",
+    "@angular/animations": "~9.1.9",
+    "@angular/cdk": "~9.2.4",
+    "@angular/common": "~9.1.9",
+    "@angular/compiler": "~9.1.9",
+    "@angular/core": "~9.1.9",
     "@angular/flex-layout": "^9.0.0-beta.29",
-    "@angular/forms": "~9.0.4",
-    "@angular/material": "^8.1.4",
-    "@angular/platform-browser": "~9.0.4",
-    "@angular/platform-browser-dynamic": "~9.0.4",
-    "@angular/router": "~9.0.4",
+    "@angular/forms": "~9.1.9",
+    "@angular/material": "~9.2.4",
+    "@angular/platform-browser": "~9.1.9",
+    "@angular/platform-browser-dynamic": "~9.1.9",
+    "@angular/router": "~9.1.9",
     "hammerjs": "^2.0.8",
     "html-to-image": "^0.1.1",
     "ol": "^5.3.3",
@@ -32,7 +32,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.4",
     "@angular/cli": "~9.0.4",
-    "@angular/compiler-cli": "~9.0.4",
+    "@angular/compiler-cli": "^9.1.0",
     "@angular/language-service": "~9.0.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
