--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@angular/platform-browser": "^9.1.11",
     "@angular/platform-browser-dynamic": "^9.1.11",
     "@angular/router": "^9.1.11",
+    "@types/openlayers": "^4.6.17",
     "html-to-image": "^0.1.1",
-    "ol": "^5.3.3",
+    "ol": "^6.3.1",
     "rxjs": "^6.5.5",
     "tslib": "^1.13.0",
     "zone.js": "^0.10.3"
