--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,7 +33,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x]
+        node-version: [14.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -43,3 +43,20 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm test -- --watch=false --browsers=ChromeHeadless
+
+ e2e:
+
+    runs-on: macos-10.15
+
+    strategy:
+      matrix:
+        node-version: [14.x]
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: npm ci
+    - run: npm run e2e -- --watch=false --browsers=ChromeHeadless
